# gnep-learn

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_1.py  example_2.py  other_examples.py
src/: gnep_learn.py
tests/: test_gnep_learn.py
