[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gnep-learn"
version = "0.1.0"
authors = [
  { name="Alberto Bemporad", email="alberto.bemporad@imtlucca.it" },
]
description = "gnep-learn - A Python package for learning-based solutions of generalized Nash equilibrium problems."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy","scipy","cvxopt","jax","jaxopt","tqdm","numba","joblib","matplotlib"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["active learning", "generalized nash equilibrium problems", "game theory", "kalman filtering"]

[project.urls]
"Homepage" = "http://cse.lab.imtlucca.it/~bemporad/gnep-learn"